# pipances

./: .gitignore  AGENTS.md  CHANGES.md  CLAUDE.md  README.md  TODO.md  flake.nix  input.css  justfile  pyproject.toml
.beads/: last-touched
.pi/skills/daisyui/: SKILL.md
importers/: example.py  metro_cu.py  sample.csv  test_data.csv
nix/: devshell.nix
nix/checks/: nixos-module.nix
nix/modules/nixos/: pipances.nix
openspec/: config.yaml  template-map.md
openspec/changes/blueprint-and-agent-browser/: proposal.md
openspec/changes/combobox-popover-rewrite/: design.md  proposal.md  tasks.md
openspec/changes/consolidate-transaction-tables/: design.md  proposal.md  tasks.md
openspec/changes/csv-upload-and-inbox/: proposal.md
openspec/changes/dashboard/: design.md  proposal.md  tasks.md
openspec/changes/dashboard-tabs-time-range/: design.md  proposal.md  tasks.md
openspec/changes/data-page-layout/: design.md  tasks.md
openspec/changes/data-page-sections/: proposal.md  tasks.md
openspec/changes/dev-tooling/: design.md  proposal.md  tasks.md
openspec/changes/enforce-recurrence-threshold/: design.md  proposal.md  tasks.md
openspec/changes/explore-page/: design.md  proposal.md  tasks.md
openspec/changes/fix-inbox-dropdowns/: design.md  proposal.md
openspec/changes/fix-minor-ui-tweaks/: design.md  proposal.md  tasks.md
openspec/changes/fix-oob-swap-fragility/: design.md  proposal.md  tasks.md
openspec/changes/generic-data-table/: design.md  proposal.md  tasks.md
openspec/changes/import-deduplication/: proposal.md  tasks.md
openspec/changes/inbox-transaction-modal-edit/: design.md  proposal.md  tasks.md
openspec/changes/ml-predictions/: design.md  proposal.md
openspec/changes/nix-packaging/: proposal.md  tasks.md
openspec/changes/rename-to-pipances/: design.md  proposal.md  tasks.md
openspec/changes/transaction-categories/: tasks.md
openspec/changes/two-stage-ml-ranking/: design.md  tasks.md
openspec/changes/view-all-transactions/: design.md  proposal.md  tasks.md
openspec/specs/account-management/: spec.md
openspec/specs/combo-box/: spec.md
scripts/: load_transfers.py  seed.py
src/financial_pipeline/: __init__.py  charts.py  db.py  ingest.py  main.py  models.py  schemas.py  utils.py
src/pipances/: charts.py  db.py  ingest.py  main.py  models.py  predict.py  utils.py
tests/: conftest.py  test_date_range.py  test_db.py  test_import.py  test_ingest.py  test_predict.py  test_routes.py
tests/ui/: conftest.py  helpers.py  test_combobox_popover.py  test_commit_flow.py  test_inbox_modal_edit.py  test_inbox_row_approve.py  test_inbox_transaction_modal_edit.py  test_oob_regressions.py  test_table_sorting.py
(+294 files in other folders)
