[project]
name = "financial-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rutrum", email = "dave@rutrum.net" }
]
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "altair>=6.0.0",
    "fastapi>=0.135.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "pandas>=3.0.1",
    "patito>=0.8.6",
    "polars>=1.39.2",
    "pyarrow>=23.0.1",
    "python-multipart>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.48",
    "uvicorn[standard]>=0.42.0",
]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "ruff>=0.15.7",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "S",   # bandit (security)
]

[tool.ruff.lint.per-file-ignores]
"importers/*" = ["S"]

[tool.djlint]
profile = "jinja"
indent = 2
max_line_length = 120
ignore = "J018,J004,H030,H031,T028"
