[project]
name = "pipances"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rutrum", email = "dave@rutrum.net" }
]
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "altair>=6.0.0",
    "fastapi>=0.135.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "pandas>=3.0.1",
    "patito>=0.8.6",
    "polars>=1.39.2",
    "pyarrow>=23.0.1",
    "python-multipart>=0.0.22",
    "scikit-learn>=1.8.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "uvicorn[standard]>=0.42.0",
]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.7",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "S",   # bandit (security)
]
ignore = [
    "E501",  # line too long — handled by formatter for code; string literals stay readable
    "E712",  # == True comparisons — required for SQLAlchemy column expressions
]

[tool.ruff.lint.per-file-ignores]
"importers/*" = ["S"]
"tests/*" = ["S"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.djlint]
profile = "jinja"
indent = 2
max_line_length = 120
ignore = "J018,J004,H030,H031,T028"
